@@ -3,6 +3,9 @@ cod-tools (unreleased)
   * Fixed:
       - cif_list_tags:
         - a typo in an option name ('--vebose' to '--verbose').
+  * Changed:
+      - cifvalues:
+        - updated the help message.
 
 cod-tools (2.9)
 
